--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <button id="login">Login</button>
 <button id="signup">SignUp</button>
 <button id="logout" style="display:none;">Logout</button>
-<!-- TODO: Add google login in button with id: googlelogin  -->
+<button id="googlelogin">Google Login</button>
 
 <script src="login.js"></script>
 
